feat: tibia menu finalizado

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="tibia-custom">
 
 <head>
     <meta charset="utf-8">
@@ -11,6 +11,7 @@
 
 <body>
     <app-root></app-root>
+    <div id="tibia-custom-background"></div>
 </body>
 
 </html>
